[tool.poetry]
name = "castlegame"
version = "0.1.0"
description = ""
authors = []
# package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pillow = "^10.3.0"
# TODO: test & add windows-curses
blessed = "^1.20.0"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
